set version to 1.8